--- a/templetes/home.html
+++ b/templetes/home.html
@@ -3,7 +3,53 @@
   Home
 {% endblock %}
 {% block body %}
-  <p>Hello, I am stating a new project call e-commarce website. This is home page.</p>
+
+    <title>Furniture Rental</title>
+    <style>
+        table {
+            width: 100%;
+            border-collapse: collapse;
+        }
+        table, th, td {
+            border: 1px solid black;
+        }
+        th, td {
+            padding: 15px;
+            text-align: left;
+        }
+        img {
+            max-width: 150px;
+            height: auto;
+        }
+    </style>
+</head>
+<body>
+    <h1>Available Furniture</h1>
+    <table>
+        <tr>
+            <th>Owner</th>
+            <th>Furniture Type</th>
+            <th>Company Name</th>
+            <th>Description</th>
+            <th>Average Cost</th>
+            <th>Minimum Rental Days</th>
+            <th>Image</th>
+        </tr>
+        {% for item in furniture_list %}
+        <tr>
+            <td>{{ item.owner }}</td>
+            <td>{{ item.furniture_type }}</td>
+            <td>{{ item.company_name }}</td>
+            <td>{{ item.description }}</td>
+            <td>${{ item.average_cost }}</td>
+            <td>{{ item.minimum_rental_days }} days</td>
+            <td><img src="{{ item.image_url }}" alt="Image of {{ item.furniture_type }}"></td>
+        </tr>
+        {% endfor %}
+    </table>
+</body>
+</html>
+
 {% endblock %}
 
 {% if user.is_authenticated %}
