--- a/templetes/base.html
+++ b/templetes/base.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>
     {% block title %}
-
     {% endblock %}
   </title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -19,7 +18,7 @@
       <div class="collapse navbar-collapse" id="navbarsExample08">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/">Ashish's Website</a>
+            <a class="nav-link active" aria-current="page" href="/">Furniture Store</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/">Home</a>
@@ -28,13 +27,23 @@
             <a class="nav-link" href="/profile">Profile</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="/shop">shop</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="/about_us">About Us</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/settings">Settings</a>
           </li>
           <li class="nav-item">
-            <a class="btn btn-outline-success my-2 my-sm-0" href="/login">Login</a>
+            {% if user.is_authenticated %}
+            <form action="{% url 'logout' %}" method="post" style="display:inline;">
+              {% csrf_token %}
+              <button type="submit" class="btn btn-outline-success my-2 my-sm-0">Log Out</button>
+            </form>
+            {% else %}
+            <a class="btn btn-outline-success my-2 my-sm-0" href="{% url 'login' %}">Login</a>
+            {% endif %}
           </li>
         </ul>
       </div>
@@ -43,9 +52,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
     crossorigin="anonymous"></script>
-    {% block body %}
-
-    {% endblock %}
+  {% block body %}
+  {% endblock %}
 </body>
 
 </html>
