--- a/templetes/base.html
+++ b/templetes/base.html
@@ -10,13 +10,42 @@
   </title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous" />
+  <style>
+    .navbar {
+      background-color: #343a40; /* Dark background color */
+    }
+
+    .navbar-brand,
+    .navbar-nav .nav-link {
+      color: #ffffff; /* White text color */
+    }
+
+    .navbar-nav .nav-link {
+      padding: 0.5rem 1rem; /* Adjust padding for better spacing */
+    }
+
+    .navbar-nav .nav-link:hover {
+      color: #ffffff; /* Hover text color */
+    }
+
+    .btn-outline-success {
+      color: #28a745; /* Green text color for success button */
+      border-color: #28a745; /* Green border color */
+    }
+
+    .btn-outline-success:hover {
+      color: #ffffff; /* White text color on hover */
+      background-color: #28a745; /* Green background color on hover */
+      border-color: #28a745; /* Green border color on hover */
+    }
+  </style>
 </head>
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark" aria-label="Tenth navbar example">
     <div class="container-fluid">
       <div class="collapse navbar-collapse" id="navbarsExample08">
-        <ul class="navbar-nav">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="/">Furniture Store</a>
           </li>
@@ -27,7 +56,7 @@
             <a class="nav-link" href="/profile">Profile</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/shop">shop</a>
+            <a class="nav-link" href="/shop">Shop</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/about_us">About Us</a>
